--- a/src/app/modules/admin/expense/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/modules/admin/expense/components/delete-dialog/delete-dialog.component.html
@@ -13,6 +13,7 @@
             class="px-6 text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
             [mat-dialog-close]="true"
             cdkFocusInitial
+            (click)="deleteCategory()"
         >
             Delete
         </button>
