--- a/src/app/modules/admin/tax/components/manage-tax/manage-tax.component.html
+++ b/src/app/modules/admin/tax/components/manage-tax/manage-tax.component.html
@@ -117,7 +117,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 name="account-search"
                 id="account-search"
                 placeholder="Search "
-                (keyup)="searchAccount($event)"
+                (keyup)="searchTax($event)"
                 class="px-4 py-2 w-full rounded caret-myAccent"
             />
 
