--- a/src/app/layout/layouts/vertical/classy/classy.component.html
+++ b/src/app/layout/layouts/vertical/classy/classy.component.html
@@ -24,7 +24,7 @@
         </div>
         <!-- User -->
         <div class="flex flex-col items-center w-full p-4">
-            <div class="relative w-24 h-24">
+            <!-- <div class="relative w-24 h-24">
                 <img
                     class="w-full h-full rounded-full"
                     *ngIf="user.avatar"
@@ -36,15 +36,15 @@
                     *ngIf="!user.avatar"
                     [svgIcon]="'heroicons_solid:user-circle'"
                 ></mat-icon>
-            </div>
+            </div> -->
             <div class="flex flex-col items-center justify-center w-full mt-6">
                 <div
-                    class="w-full whitespace-nowrap text-ellipsis overflow-hidden text-center leading-normal font-medium"
+                    class="w-full whitespace-nowrap text-ellipsis overflow-hidden text-center leading-normal font-semibold text-[1rem]"
                 >
                     {{ userName }}
                 </div>
                 <div
-                    class="w-full mt-0.5 whitespace-nowrap text-ellipsis overflow-hidden text-center text-md leading-normal font-medium text-textColor"
+                    class="w-full mt-0.5 whitespace-nowrap text-ellipsis overflow-hidden text-center leading-normal font-semibold text-[1rem] text-textColor"
                 >
                     {{ userMail }}
                 </div>
