--- a/src/app/modules/admin/expense/components/add-expense/add-expense.component.html
+++ b/src/app/modules/admin/expense/components/add-expense/add-expense.component.html
@@ -9,17 +9,21 @@
             (click)="navigateToHome()"
         >
         </mat-icon>
-        <p>Income</p>
+        <p>Expense</p>
         <span>/</span>
-        <p class="font-semibold text-myAccent">Add Expense</p>
+        <p class="font-semibold text-myAccent">
+            {{ updateFormData != undefined ? "Update Expense" : "Add Expense" }}
+        </p>
     </div>
 
     <!-- Title -->
     <h3 class="font-bold text-[1.5rem] text-center sm:text-left">
-        Add Expense
+        {{ updateFormData != undefined ? "Update Expense" : "Add Expense" }}
     </h3>
 
     <form
+        [formGroup]="addExpenseForm"
+        (ngSubmit)="openCollectDialog()"
         class="p-4 sm:p-8 shadow-md rounded-md flex flex-col gap-4 items-center justify-between"
     >
         <div
@@ -32,6 +36,8 @@
                 <input
                     id="amount"
                     type="number"
+                    (change)="calculateTaxByAmount()"
+                    formControlName="totalAmount"
                     placeholder="Enter Amount"
                     class="border border-myAccent p-2 rounded"
                 />
@@ -43,6 +49,7 @@
                 >
                 <input
                     id="description"
+                    formControlName="description"
                     type="text"
                     placeholder="Enter Description"
                     class="border border-myAccent p-2 rounded"
@@ -56,23 +63,35 @@
                 <div
                     class="flex flex-col lg:flex-row items-start lg:items-center justify-between gap-8"
                 >
-                    <mat-checkbox (change)="toggleTaxInput()" class=""
+                    <mat-checkbox
+                        (change)="toggleTaxInput($event)"
+                        formControlName="taxApplicable"
+                        class=""
+                        value="0"
                         >Tax Applicable</mat-checkbox
                     >
 
                     <mat-radio-group
                         aria-label="Select an option"
+                        formControlName="taxApplicable"
                         class="flex flex-col lg:flex-row items-start justify-between gap-8"
                     >
                         <mat-radio-button
                             class="accent-myAccent"
-                            [checked]="!textInputDisabled"
-                            value="include"
+                            [checked]="includeInputChecked"
+                            [disabled]="includeInputDisabled"
+                            value="1"
+                            #include
+                            (change)="calculateTaxByRadio($event)"
                             >Including Tax</mat-radio-button
                         >
                         <mat-radio-button
                             class="accent-myAccent"
-                            value="exclude"
+                            [checked]="excludeInputChecked"
+                            [disabled]="excludeInputDisabled"
+                            value="2"
+                            #exclude
+                            (change)="calculateTaxByRadio($event)"
                             >Excluding Tax</mat-radio-button
                         >
                     </mat-radio-group>
@@ -85,14 +104,15 @@
                 >
                 <mat-form-field class="w-full mt-0">
                     <mat-select
+                        (valueChange)="calculateTaxBySelect($event)"
                         #clubs
                         matInfix
-                        [disabled]="textInputDisabled"
+                        formControlName="taxId"
                         disableOptionCentering
-                        placeholder="Select Tax Type"
+                        placeholder="Select Tax"
                     >
-                        <mat-option *ngFor="let tax of taxes" [value]="tax.id"
-                            >{{ tax.name }}
+                        <mat-option *ngFor="let tax of taxData" [value]="tax.id"
+                            >{{ tax.taxName }}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
@@ -135,9 +155,10 @@
                     </div>
                 </div>
             </div>
+
             <div class="flex flex-col gap-8 items-start">
                 <div class="flex flex-col gap-2 w-full">
-                    <label for="incomeCategory" class="font-medium"
+                    <label for="expenseCategory" class="font-medium"
                         >Expense Category
                         <span class="text-red-600">*</span></label
                     >
@@ -146,40 +167,32 @@
                             #clubs
                             matInfix
                             disableOptionCentering
+                            formControlName="categoryId"
                             placeholder="Select Category"
                         >
                             <mat-option
-                                *ngFor="let category of categories"
+                                *ngFor="let category of categoryData"
                                 [value]="category.id"
-                                >{{ category.name }}
+                                >{{ category.categoryName }}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
-                <div class="text-myAccent font-semibold text-[1.3rem] mb-2">
-                    Total Amount: <span></span>
+
+                <div
+                    *ngIf="showFinal"
+                    class="text-myAccent font-semibold text-[1.3rem] mb-2"
+                >
+                    Total Amount: {{ finalAmount | number }}<span></span>
                 </div>
             </div>
-
-            <!-- <div class="flex items-end justify-between w-full">
-                <div class="flex flex-col gap-2 w-fit">
-                    <label class="font-medium" for="description"
-                        >Upload Receipt</label
-                    >
-                    <input
-                        id="description"
-                        type="file"
-                        class="file:border-myAccent file:bg-transparent file:cursor-pointer file:mr-4 file:py-2 file:px-4 file:rounded file:border-[1px] hover:file:bg-myAccent hover:file:text-white file:text-myAccent file:transition-all"
-                    />
-                </div>
-            </div> -->
         </div>
+
         <button
             type="submit"
-            (click)="openCollectDialog()"
             class="py-2 px-10 rounded font-semibold text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] self-end transition-all hover:bg-accentHover bg-darkAccent w-fit"
         >
-            Add Expense
+            {{ updateFormData != undefined ? "Update Expense" : "Add Expense" }}
         </button>
     </form>
 </section>
