--- a/src/app/modules/admin/expense/components/manage-expense/manage-expense.component.html
+++ b/src/app/modules/admin/expense/components/manage-expense/manage-expense.component.html
@@ -22,7 +22,7 @@
         </div>
 
         <!-- Export SVGs -->
-        <div class="flex items-center gap-4">
+        <!-- <div class="flex items-center gap-4">
             <svg
                 matTooltip="Export as PDF"
                 version="1.0"
@@ -102,7 +102,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                     />
                 </g>
             </svg>
-        </div>
+        </div> -->
     </div>
 
     <!-- Content -->
@@ -115,8 +115,9 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
         >
             <input
                 type="search"
-                name="account-search"
-                id="account-search"
+                name="expense-search"
+                (keyup)="searchExpense($event)"
+                id="expense-search"
                 placeholder="Search "
                 class="px-4 py-2 w-full rounded caret-myAccent"
             />
@@ -132,9 +133,30 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 [rangePicker]="picker"
                 placeholder="Select Date"
             >
-                <input matStartDate placeholder="Start date" />
-                <input matEndDate placeholder="End date" />
+                <input
+                    matStartDate
+                    placeholder="Start date"
+                    [(ngModel)]="getExpenseModal.startDate"
+                    (dateChange)="dateFilter()"
+                />
+                <input
+                    matEndDate
+                    placeholder="End date"
+                    [(ngModel)]="getExpenseModal.endDate"
+                    (dateChange)="dateFilter()"
+                />
             </mat-date-range-input>
+
+            <mat-icon
+                matDatepickerToggleIcon
+                class="cursor-pointer"
+                (click)="clearDate()"
+                *ngIf="
+                    getExpenseModal.startDate != null &&
+                    getExpenseModal.endDate != null
+                "
+                >clear</mat-icon
+            >
 
             <mat-datepicker-toggle
                 class="text-myAccent w-7"
@@ -165,8 +187,10 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
         >
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef>SN</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.position }}
+                <td mat-cell *matCellDef="let element; let i = index">
+                    {{
+                        paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
+                    }}
                 </td>
             </ng-container>
 
@@ -176,7 +200,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                     <div class="flex items-center gap-2">
                         <img
                             class="w-[24px]"
-                            [src]="element.imgUrl"
+                            [src]="url + '/' + element.categoryImage"
                             [alt]="element.categoryName"
                         />
                         <span>{{ element.categoryName }}</span>
@@ -194,21 +218,21 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
             <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef>Created Date</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.date }}
+                    {{ element.createDate | date : "dd-MM-yyyy" }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="taxAmount">
                 <th mat-header-cell *matHeaderCellDef>Tax Amount</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.taxAmount }}
+                    {{ element.taxAmount == null ? "-" : element.taxAmount }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="amount">
                 <th mat-header-cell *matHeaderCellDef>Amount</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.amount }}
+                    {{ element.totalAmount }}
                 </td>
             </ng-container>
 
@@ -216,7 +240,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 <th mat-header-cell *matHeaderCellDef>Receipt</th>
                 <td mat-cell *matCellDef="let element">
                     <button
-                        (click)="openReceiptDialog()"
+                        (click)="openReceiptDialog(element.receiptImage)"
                         class="shadow-[inset_4px_4px_13px_rgba(0,0,0,0.25)] px-3 py-1 bg-darkAccent rounded transition hover:bg-accentHover text-textColor"
                     >
                         View
@@ -229,7 +253,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 <td mat-cell *matCellDef="let element">
                     <mat-icon
                         svgIcon="heroicons_outline:eye"
-                        (click)="openPaymentDialog()"
+                        (click)="openPaymentDialog(element.id)"
                         class="text-myAccent ml-5 cursor-pointer"
                     ></mat-icon>
                 </td>
@@ -249,7 +273,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                         src="assets/icons/edit.svg"
                         matTooltip="Edit Expense"
                         alt="Edit"
-                        (click)="editExpense()"
+                        (click)="editExpense(element.id)"
                         class="w-[24px] h-[24px] cursor-pointer ml-5"
                     />
                 </td>
@@ -258,5 +282,11 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
+
+        <mat-paginator
+            #paginatorRef
+            [pageSizeOptions]="[5, 10, 25, 100]"
+            [showFirstLastButtons]="true"
+        ></mat-paginator>
     </div>
 </section>
