--- a/src/app/modules/admin/income/components/add-income/add-income.component.html
+++ b/src/app/modules/admin/income/components/add-income/add-income.component.html
@@ -11,14 +11,20 @@
         </mat-icon>
         <p>Income</p>
         <span>/</span>
-        <p class="font-semibold text-myAccent">Add Income</p>
+        <p class="font-semibold text-myAccent">
+            {{ updateFormData != undefined ? "Update Income" : "Add Income" }}
+        </p>
     </div>
 
     <!-- Title -->
-    <h3 class="font-bold text-[1.5rem] text-center sm:text-left">Add Income</h3>
+    <h3 class="font-bold text-[1.5rem] text-center sm:text-left">
+        {{ updateFormData != undefined ? "Update Income" : "Add Income" }}
+    </h3>
 
     <!-- Content -->
     <form
+        [formGroup]="addIncomeForm"
+        (ngSubmit)="openCollectDialog()"
         class="p-4 sm:p-8 shadow-md rounded-md flex flex-col gap-4 items-center justify-between"
     >
         <div
@@ -31,6 +37,8 @@
                 <input
                     id="amount"
                     type="number"
+                    (change)="calculateTaxByAmount()"
+                    formControlName="totalAmount"
                     placeholder="Enter Amount"
                     class="border border-myAccent p-2 rounded"
                 />
@@ -43,30 +51,11 @@
                 <input
                     id="description"
                     type="text"
+                    formControlName="description"
                     placeholder="Enter Description"
                     class="border border-myAccent p-2 rounded"
                 />
             </div>
-            <!-- <div class="flex flex-col gap-2">
-                <label for="date" class="font-medium"
-                    >Date <span class="text-red-600">*</span></label
-                >
-                <mat-form-field appearance="fill" class="w-full">
-                    <input
-                        matInput
-                        [matDatepicker]="picker"
-                        placeholder="Select Date"
-                    />
-
-                    [value]="todayDate"
-                    <mat-datepicker-toggle
-                        matIconSuffix
-                        [for]="picker"
-                        class="text-myAccent w-7"
-                    ></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                </mat-form-field>
-            </div> -->
 
             <div class="flex flex-col gap-2 w-full">
                 <label for="tax" class="font-medium"
@@ -75,43 +64,40 @@
                 <div
                     class="flex flex-col lg:flex-row items-start lg:items-center justify-between gap-8"
                 >
-                    <mat-checkbox (change)="toggleTaxInput()" class=""
+                    <mat-checkbox
+                        (change)="toggleTaxInput($event)"
+                        formControlName="taxApplicable"
+                        class=""
+                        value="0"
                         >Tax Applicable</mat-checkbox
                     >
 
                     <mat-radio-group
                         aria-label="Select an option"
+                        formControlName="taxApplicable"
                         class="flex flex-col lg:flex-row items-start justify-between gap-8"
                     >
                         <mat-radio-button
                             class="accent-myAccent"
-                            [checked]="!textInputDisabled"
-                            [disabled]="textInputDisabled"
-                            value="include"
+                            [checked]="includeInputChecked"
+                            [disabled]="includeInputDisabled"
+                            value="1"
+                            #include
+                            (change)="calculateTaxByRadio($event)"
                             >Including Tax</mat-radio-button
                         >
                         <mat-radio-button
                             class="accent-myAccent"
-                            [disabled]="textInputDisabled"
-                            value="exclude"
+                            [checked]="excludeInputChecked"
+                            [disabled]="excludeInputDisabled"
+                            value="2"
+                            #exclude
+                            (change)="calculateTaxByRadio($event)"
                             >Excluding Tax</mat-radio-button
                         >
                     </mat-radio-group>
                 </div>
             </div>
-
-            <!-- <div class="flex flex-col gap-2">
-                <label class="font-medium" for="tax-rate"
-                    >Tax Rate <span class="text-red-600">*</span></label
-                >
-                <input
-                    id="tax-rate"
-                    type="number"
-                    [disabled]="textInputDisabled"
-                    placeholder="Enter Tax Rate"
-                    class="border border-myAccent p-2 rounded"
-                />
-            </div> -->
 
             <div class="flex flex-col gap-2 w-full">
                 <label for="tax-type" class="font-medium"
@@ -119,31 +105,19 @@
                 >
                 <mat-form-field class="w-full mt-0">
                     <mat-select
+                        (valueChange)="calculateTaxBySelect($event)"
                         #clubs
                         matInfix
-                        [disabled]="textInputDisabled"
+                        formControlName="taxId"
                         disableOptionCentering
-                        placeholder="Select Tax Type"
+                        placeholder="Select Tax "
                     >
-                        <mat-option *ngFor="let tax of taxes" [value]="tax.id"
-                            >{{ tax.name }}
+                        <mat-option *ngFor="let tax of taxData" [value]="tax.id"
+                            >{{ tax.taxName }}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
             </div>
-
-            <!-- <div class="flex items-end justify-between w-full">
-                <div class="flex flex-col gap-2 w-fit">
-                    <label class="font-medium" for="upload-receipt"
-                        >Upload Receipt</label
-                    >
-                    <input
-                        id="upload-receipt"
-                        type="file"
-                        class="file:border-myAccent file:bg-transparent file:cursor-pointer file:mr-4 file:py-2 file:px-4 file:rounded file:border-[1px] hover:file:bg-myAccent hover:file:text-white file:text-myAccent file:transition-all"
-                    />
-                </div>
-            </div> -->
 
             <div
                 class="w-full h-[12rem] p-[2rem] border-[2px] border-opacity-75 mt-2 rounded border-myAccent text-center border-dashed relative"
@@ -194,28 +168,32 @@
                             #clubs
                             matInfix
                             disableOptionCentering
+                            formControlName="categoryId"
                             placeholder="Select Category"
                         >
                             <mat-option
-                                *ngFor="let category of categories"
+                                *ngFor="let category of categoryData"
                                 [value]="category.id"
-                                >{{ category.name }}
+                                >{{ category.categoryName }}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
 
-                <div class="text-myAccent font-semibold text-[1.3rem] mb-2">
-                    Total Amount: <span></span>
+                <div
+                    *ngIf="showFinal"
+                    class="text-myAccent font-semibold text-[1.3rem] mb-2"
+                >
+                    Total Amount: {{ finalAmount | number }}<span></span>
                 </div>
             </div>
         </div>
+
         <button
             type="submit"
-            (click)="openCollectDialog()"
             class="py-2 px-10 rounded font-semibold text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] self-end transition-all hover:bg-accentHover bg-darkAccent w-fit"
         >
-            Add Income
+            {{ updateFormData != undefined ? "Update Income" : "Add Income" }}
         </button>
     </form>
 </section>
