--- a/src/app/modules/admin/reports/components/accounts-statement/accounts-statement.component.html
+++ b/src/app/modules/admin/reports/components/accounts-statement/accounts-statement.component.html
@@ -115,8 +115,9 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 type="search"
                 name="account-search"
                 id="account-search"
+                (keyup)="searchAccountName($event)"
                 placeholder="Search "
-                class="px-4 py-2 rounded caret-myAccent"
+                class="px-4 w-full py-2 rounded caret-myAccent"
             />
 
             <mat-icon
@@ -130,9 +131,30 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 [rangePicker]="picker"
                 placeholder="Select Date"
             >
-                <input matStartDate placeholder="Start date" />
-                <input matEndDate placeholder="End date" />
+                <input
+                    matStartDate
+                    placeholder="Start date"
+                    [(ngModel)]="getAccountNameModel.startDate"
+                    (dateChange)="dateFilter()"
+                />
+                <input
+                    matEndDate
+                    placeholder="End date"
+                    [(ngModel)]="getAccountNameModel.endDate"
+                    (dateChange)="dateFilter()"
+                />
             </mat-date-range-input>
+
+            <mat-icon
+                matDatepickerToggleIcon
+                class="cursor-pointer"
+                (click)="clearDate()"
+                *ngIf="
+                    getAccountNameModel.startDate != null &&
+                    getAccountNameModel.endDate != null
+                "
+                >clear</mat-icon
+            >
 
             <mat-datepicker-toggle
                 class="text-myAccent w-7"
@@ -152,15 +174,17 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
         >
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef>SN</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.position }}
+                <td mat-cell *matCellDef="let element; let i = index">
+                    {{
+                        paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
+                    }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="holderName">
                 <th mat-header-cell *matHeaderCellDef>Holder Name</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.holderName }}
+                    {{ element.accountName }}
                 </td>
             </ng-container>
 
@@ -170,7 +194,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 </th>
                 <td mat-cell *matCellDef="let element" class="text-right">
                     <button
-                        (click)="viewTransactions()"
+                        (click)="viewTransactions(element.id)"
                         class="shadow-[inset_4px_4px_13px_rgba(0,0,0,0.25)] px-3 py-1 bg-darkAccent rounded transition hover:bg-accentHover text-textColor"
                     >
                         View
@@ -181,6 +205,12 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
+
+        <mat-paginator
+            #paginatorRef
+            [pageSizeOptions]="[5, 10, 25, 100]"
+            [showFirstLastButtons]="true"
+        ></mat-paginator>
     </div>
 </section>
 
