--- a/src/app/modules/admin/reports/components/expense-payment-dialog/expense-payment-dialog.component.html
+++ b/src/app/modules/admin/reports/components/expense-payment-dialog/expense-payment-dialog.component.html
@@ -9,8 +9,10 @@
         >
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef>SN</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.position }}
+                <td mat-cell *matCellDef="let element; let i = index">
+                    {{
+                        paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
+                    }}
                 </td>
             </ng-container>
 
@@ -24,7 +26,19 @@
             <ng-container matColumnDef="paymentMode">
                 <th mat-header-cell *matHeaderCellDef>Payment Mode</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.paymentMode }}
+                    {{
+                        element.paymentMode == 0
+                            ? "Gpay"
+                            : element.paymentMode == 1
+                            ? "PhonePe"
+                            : element.paymentMode == 2
+                            ? "Credit Card / Debit Card"
+                            : element.paymentMode == 3
+                            ? "Cheque"
+                            : element.paymentMode == 4
+                            ? "Cash"
+                            : "-"
+                    }}
                 </td>
             </ng-container>
 
@@ -38,13 +52,19 @@
             <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef>Created Date</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.date }}
+                    {{ element.createdAt | date : "dd-MM-yyyy" }}
                 </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
+
+        <mat-paginator
+            #paginatorRef
+            [pageSizeOptions]="[5, 10, 25, 100]"
+            [showFirstLastButtons]="true"
+        ></mat-paginator>
     </div>
 </mat-dialog-content>
 
