--- a/src/app/modules/admin/reports/components/expense-report/expense-report.component.html
+++ b/src/app/modules/admin/reports/components/expense-report/expense-report.component.html
@@ -22,7 +22,7 @@
         </div>
 
         <!-- Export SVGs -->
-        <div class="flex items-center gap-4">
+        <!-- <div class="flex items-center gap-4">
             <svg
                 matTooltip="Export as PDF"
                 version="1.0"
@@ -102,7 +102,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                     />
                 </g>
             </svg>
-        </div>
+        </div> -->
     </div>
 
     <!-- Content -->
@@ -118,7 +118,8 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 name="account-search"
                 id="account-search"
                 placeholder="Search "
-                class="px-4 py-2 rounded caret-myAccent"
+                (keyup)="searchExpenseReport($event)"
+                class="px-4 w-full py-2 rounded caret-myAccent"
             />
 
             <mat-icon
@@ -132,9 +133,30 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 [rangePicker]="picker"
                 placeholder="Select Date"
             >
-                <input matStartDate placeholder="Start date" />
-                <input matEndDate placeholder="End date" />
+                <input
+                    matStartDate
+                    placeholder="Start date"
+                    [(ngModel)]="getExpenseReportsModal.startDate"
+                    (dateChange)="dateFilter()"
+                />
+                <input
+                    matEndDate
+                    placeholder="End date"
+                    [(ngModel)]="getExpenseReportsModal.endDate"
+                    (dateChange)="dateFilter()"
+                />
             </mat-date-range-input>
+
+            <mat-icon
+                matDatepickerToggleIcon
+                class="cursor-pointer"
+                (click)="clearDate()"
+                *ngIf="
+                    getExpenseReportsModal.startDate != null &&
+                    getExpenseReportsModal.endDate != null
+                "
+                >clear</mat-icon
+            >
 
             <mat-datepicker-toggle
                 class="text-myAccent w-7"
@@ -153,54 +175,16 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 >
                     Filter By Category Name
                 </button>
-                <button
-                    mat-menu-item
-                    [matMenuTriggerFor]="menu3"
-                    class="hover:bg-darkAccent hover:text-textColor transition"
-                >
-                    Filter By Account Name
-                </button>
             </mat-menu>
 
             <mat-menu #menu2="matMenu" class="max-h-[15rem]">
                 <button
+                    (click)="filterByCategory(category.id)"
+                    *ngFor="let category of categoryData"
                     mat-menu-item
                     class="hover:bg-darkAccent hover:text-textColor transition"
                 >
-                    Salary
-                </button>
-                <button
-                    mat-menu-item
-                    class="hover:bg-darkAccent hover:text-textColor transition"
-                >
-                    Part Time
-                </button>
-                <button
-                    mat-menu-item
-                    class="hover:bg-darkAccent hover:text-textColor transition"
-                >
-                    Travel
-                </button>
-            </mat-menu>
-
-            <mat-menu #menu3="matMenu" class="max-h-[15rem]">
-                <button
-                    mat-menu-item
-                    class="hover:bg-darkAccent hover:text-textColor transition"
-                >
-                    Mohamed Ifas
-                </button>
-                <button
-                    mat-menu-item
-                    class="hover:bg-darkAccent hover:text-textColor transition"
-                >
-                    Farves
-                </button>
-                <button
-                    mat-menu-item
-                    class="hover:bg-darkAccent hover:text-textColor transition"
-                >
-                    Safiyudeen
+                    {{ category.categoryName }}
                 </button>
             </mat-menu>
 
@@ -246,8 +230,10 @@ l109 -150 2066 0 2067 0 91 123 c143 192 169 257 142 354 -17 62 -96 143 -155
         >
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef>SN</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.position }}
+                <td mat-cell *matCellDef="let element; let i = index">
+                    {{
+                        paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
+                    }}
                 </td>
             </ng-container>
 
@@ -257,7 +243,7 @@ l109 -150 2066 0 2067 0 91 123 c143 192 169 257 142 354 -17 62 -96 143 -155
                     <div class="flex items-center gap-2">
                         <img
                             class="w-[24px]"
-                            [src]="element.imgUrl"
+                            [src]="url + '/' + element.categoryImage"
                             [alt]="element.categoryName"
                         />
                         <span>{{ element.categoryName }}</span>
@@ -275,21 +261,21 @@ l109 -150 2066 0 2067 0 91 123 c143 192 169 257 142 354 -17 62 -96 143 -155
             <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef>Created Date</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.date }}
+                    {{ element.createDate | date : "dd-MM-yyyy" }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="taxAmount">
                 <th mat-header-cell *matHeaderCellDef>Tax Amount</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.taxAmount }}
+                    {{ element.taxAmount == null ? "-" : element.taxAmount }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="amount">
                 <th mat-header-cell *matHeaderCellDef>Amount</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.amount }}
+                    {{ element.totalAmount }}
                 </td>
             </ng-container>
 
@@ -297,7 +283,7 @@ l109 -150 2066 0 2067 0 91 123 c143 192 169 257 142 354 -17 62 -96 143 -155
                 <th mat-header-cell *matHeaderCellDef>Receipt</th>
                 <td mat-cell *matCellDef="let element">
                     <button
-                        (click)="openReceiptDialog()"
+                        (click)="openReceiptDialog(element.receiptImage)"
                         class="shadow-[inset_4px_4px_13px_rgba(0,0,0,0.25)] px-3 py-1 bg-darkAccent rounded transition hover:bg-accentHover text-textColor"
                     >
                         View
@@ -310,7 +296,7 @@ l109 -150 2066 0 2067 0 91 123 c143 192 169 257 142 354 -17 62 -96 143 -155
                 <td mat-cell *matCellDef="let element">
                     <mat-icon
                         svgIcon="heroicons_outline:eye"
-                        (click)="openPaymentDialog()"
+                        (click)="openPaymentDialog(element.id)"
                         class="text-myAccent ml-5 cursor-pointer"
                     ></mat-icon>
                 </td>
@@ -319,5 +305,13 @@ l109 -150 2066 0 2067 0 91 123 c143 192 169 257 142 354 -17 62 -96 143 -155
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
+
+        <mat-paginator
+            #paginatorRef
+            [pageSizeOptions]="[5, 10, 25, 100]"
+            [showFirstLastButtons]="true"
+        ></mat-paginator>
     </div>
 </section>
+
+<app-toaster-container></app-toaster-container>
