--- a/src/@fuse/components/navigation/vertical/vertical.component.html
+++ b/src/@fuse/components/navigation/vertical/vertical.component.html
@@ -1,6 +1,4 @@
-<div
-    class="fuse-vertical-navigation-wrapper shadow-[inset_4px_4px_86px_50px_rgba(0,0,0,0.25)]"
->
+<div class="fuse-vertical-navigation-wrapper">
     <!-- Header -->
     <div class="fuse-vertical-navigation-header">
         <ng-content select="[fuseVerticalNavigationHeader]"></ng-content>
