--- a/src/app/modules/admin/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <section
-    class="m-5 sm:m-10 p-4 sm:p-6 shadow-[inset_4px_4px_250px_130px_rgba(211,234,255,0.54)] bg-[#EFEFEF] rounded-lg w-full flex flex-col gap-4 overflow-y-scroll"
+    class="m-5 sm:m-10 p-4 sm:p-6 bg-[#ECECEC] rounded-lg w-full flex flex-col gap-4 overflow-y-scroll"
 >
     <!-- Date Range Filter -->
     <div class="bg-transparent self-end">
@@ -43,7 +43,7 @@
     <!-- Cards -->
     <div class="flex flex-col card-alignment items-center justify-center gap-4">
         <div
-            class="flex items-center justify-center w-full bg-[#b4d9ff] gap-6 md:gap-3 gap6 shadow-[inset_-12px_-8px_40px_rgba(0,_0,_0,_0.24)] rounded-lg px-[2rem] py-[2rem] h-full"
+            class="flex items-center justify-center w-full bg-[#8EC6FF] gap-6 md:gap-3 gap6 rounded-lg px-[2rem] py-[2rem] h-full"
         >
             <img
                 class="w-[80px] md:w-[60px] w80"
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div
-            class="flex items-center justify-center w-full bg-[#ffafc8] gap-6 md:gap-3 gap6 shadow-[inset_-12px_-8px_40px_rgba(0,_0,_0,_0.24)] rounded-lg px-[2rem] py-[2rem] h-full"
+            class="flex items-center justify-center w-full bg-[#FFC296] gap-6 md:gap-3 gap6 rounded-lg px-[2rem] py-[2rem] h-full"
         >
             <img
                 class="w-[80px] md:w-[60px] w80"
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div
-            class="flex items-center justify-center w-full bg-[#bdffe1] gap-6 md:gap-3 gap6 shadow-[inset_-12px_-8px_40px_rgba(0,_0,_0,_0.24)] rounded-lg px-[2rem] py-[2rem] h-full"
+            class="flex items-center justify-center w-full bg-[#FFA8C2] gap-6 md:gap-3 gap6 rounded-lg px-[2rem] py-[2rem] h-full"
         >
             <img
                 class="w-[80px] md:w-[60px] w80"
