--- a/src/app/modules/admin/income/components/add-income/add-income.component.html
+++ b/src/app/modules/admin/income/components/add-income/add-income.component.html
@@ -37,6 +37,7 @@
                 <input
                     id="amount"
                     type="number"
+                    required
                     (change)="calculateTaxByAmount()"
                     formControlName="totalAmount"
                     placeholder="Enter Amount"
